Source/WebCore/workers/service/server/SWServerRegistration.h
@@ -47,6 +47,8 @@ struct ExceptionData;
 struct ServiceWorkerContextData;
 struct ServiceWorkerFetchResult;
 
+enum class IsAppBound : bool { No, Yes };
+
 class SWServerRegistration : public CanMakeWeakPtr<SWServerRegistration> {
     WTF_MAKE_FAST_ALLOCATED;
 public:
@@ -99,11 +101,13 @@ public:
     void forEachConnection(const WTF::Function<void(SWServer::Connection&)>&);
 
     WEBCORE_EXPORT bool shouldSoftUpdate(const FetchOptions&) const;
-    WEBCORE_EXPORT void scheduleSoftUpdate();
+    WEBCORE_EXPORT void scheduleSoftUpdate(IsAppBound);
     static constexpr Seconds softUpdateDelay { 1_s };
 
     URL scopeURLWithoutFragment() const { return m_scopeURL; }
     URL scriptURL() const { return m_scriptURL; }
+
+    bool isAppBound() { return m_isAppBound; }
 
 private:
     void activate();
@@ -130,6 +134,8 @@ private:
     HashMap<SWServerConnectionIdentifier, HashSet<DocumentIdentifier>> m_clientsUsingRegistration;
 
     WebCore::Timer m_softUpdateTimer;
+    
+    bool m_isAppBound { false };
 };
 
 } // namespace WebCore
